2004-05-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): prevent plot from flipping upside-down
	if the title or key take up too much vertical space.

	* term/post.trm: Add explicit default case to encoding switch.

2004-05-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Reduce time delay in waitforinput() from 1 sec
	to 100 usec.

2004-05-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc src/term_api.h src/term.c term/post.trm: Add support
	for CP1250 character encoding (Central and Eastern Europe encoding on
	MS-Windows).

2004-05-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/README: Clean up some of the descriptions.

2004-05-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Add an explicit "noenhanced" option to set term x11,
	since otherwise once you select enhanced text you cannot turn it off
	again.

2004-05-07  Franz Bakan  <fbakan@users.sourceforge.net>

	* src/os2/gclient.c: SF bug #940596. Match menu items "GnuplotPM ->
	Mouse -> Coords format -> ..." to the text actually printed.

2004-05-06  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wtext.c (WndTextProc): Fix unbelievably old
	long-standing bug: dragging the scroll bar "thumb" around didn't
	work, because the method of acccessing the position was completely
	wrong.

2004-05-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/set.c (set_range): Fix SF bug #946900: buggy interaction of
	'set view map' with 'set yrange'.
	(set_view): Make error message string variables static and const
	to preserve some stack.

2004-05-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c, term/x11.trm:  Move handling of mouse click after
	'pause mouse' from mouse.c to x11.trm.  This removes an otherwise
	unnecessary do_string("replot") from mouse.c, and instead adds an
	explicit check for mouse button release in X11_waitforinput().
